# trading-simulator

./: .dockerignore  .env.localhost_pg  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-prod  README.md  app_build.bsh  app_build.cmd  app_shell.bsh  app_start.cmd  compose-enable-ports.yml  compose.yml  pyproject.toml  pytest.ini
app/: Procfile  celery-entrypoint.sh  entrypoint.sh  gunicorn.conf.py
app/src/common/: const.py  country.py  slot_length.py  time.py  time_slot.py
app/src/common/test/: test_time_slot.py
app/src/core/: celery.py  metrics.py  settings.py  urls.py
app/src/offering/: admin.py  models.py  serializers.py  urls.py  views.py
app/src/offering/migrations/: 0001_initial.py
app/src/offering/test/: test_TestDailyOffering.py  test_TestOfferingAPI.py
app/src/rules/: admin.py  models.py
app/src/rules/migrations/: 0001_initial.py  0002_saledefinition.py
app/src/rules/test/: test_saleDefinition.py
